<resources>
    <string name="app_name">MediaContent</string>
    <string name="retry">Retry</string>
    <string name="loading">Loading</string>
    <string name="title_activity_movie_detail">MovieDetailActivity</string>
    <string name="action_settings">Settings</string>

    <string name="upcoming">UPCOMING</string>
    <string name="latest">LATEST</string>
    <string name="popular">POPULAR</string>
    <string name="top_rated">Top RATED</string>
    <string name="now_playing">NOW PLAYING</string>

    <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
        cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss
        bavarian
        bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese
        rubber
        cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty
        cheese
        the big cheese.
    </string>
    <string name="overview">Overview</string>
    <string name="video">Video</string>
    <string name="reviews">Reviews</string>
    <string name="movies">Movies</string>
    <string name="request_failed">Request Failed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="recom_movies">Recommended Movies</string>
    <string name="text_movies">Movies</string>
    <string name="text_schedules">Tv Shows</string>
    <string name="favorite">Favourite</string>
    <string name="followers">Followers</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="error_internet_connection">Device is not connected to internet. Please check your settings.</string>
</resources>
