<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:text="@string/overview"/>

                <TextView
                    android:id="@+id/overview_text_view"
                    style="@style/Base.TextAppearance.AppCompat.Body2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:text="aksdjfkasjdfkjskdfhksdfkkfds"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>
        <TextView
            style="@style/Base.TextAppearance.AppCompat.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/similar_movies"
        />

        <FrameLayout
            android:id="@+id/similar_movie_container"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"/>

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/recom_movies"
        />

        <FrameLayout
            android:id="@+id/recommended_movie_container"
            android:layout_width="match_parent"
            android:layout_height="160dp"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>